# teracada

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
build_scripts/: build.sh  build_teracada_graph.sh  build_teracada_matrix.sh
core/data_structures/: teracada_array.cc  teracada_array_capi.cc  teracada_array_unit_tests.cc  teracada_bitwise.cc  teracada_dict.cc  teracada_dict_unit_tests.cc  teracada_error.cc  teracada_graph.cc  teracada_matrix.cc  teracada_stats.cc
core/regression/: teracada_regression.cc  teracada_regression_capi.cc
docs/: CNAME  index.html
html/: annotated.html  classTeracadaArray-members.html  classTeracadaArray.html  classTeracadaDict-members.html  classTeracadaDict.html  classTeracadaException-members.html  classTeracadaException.html  classTeracadaGraph-members.html  classTeracadaGraph.html  classTeracadaLinearRegression-members.html  classTeracadaLinearRegression.html  classTeracadaMatrix-members.html  classTeracadaMatrix.html  classes.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_0cde913a7397d9d30a382673cff187e3.html  dir_0dc367f79b07ebfaec8a041a48a57a2c.html  dir_218c7f5faf0d11c4a0569a0859abd428.html  dir_21a56d6ccf0f373245a359d0b9c0ebea.html  dir_2365748fcc5f28bb72f12aab31421295.html  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_4cb6ecdab81c5b99e5ddce6af193932f.html  dir_57d8a54d4546c04dde3510520ea02173.html  dir_5cb468e685cb3b1e0e661409e92961a7.html  dir_652ad56bcda140f47a73f7853caa07b1.html  dir_721f94ee8738a41e5feadd6c7b5e9c0c.html  dir_725466552650a32d0da5cfb09b18f0c1.html  dir_7b8e0e68138d15a4d7d15803738c86bc.html  dir_ac9a1730c554d83a8fae42e894cd5352.html  dir_afb108b8e5fcdccf17140f06ca9352e6.html  dir_b791d94441592411892c1ffba2fb5435.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e35b9dee53efb9595c2cbc24a48a4d1f.html  dir_e7c608ee7a349a990cecd74a7d13d4b1.html  dir_ea379d93417b20b4328aad2178338d97.html  dir_ebfebb032995ef976e842f19eccc5add.html  dir_ef8ccfb71357276b50a1a189d478d29d.html  dir_f04f3cd882737d64c9e81e8f9a49d7be.html  dir_f3dc8793ec8f63807690effe2610739c.html  files.html  (+29 more)
html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  files_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_1.js  searchdata.js
include/: teracada.h  teracada_array.h  teracada_common.h  teracada_dict.h  teracada_error.h  teracada_graph.h  teracada_matrix.h  teracada_regression.h
pyapi/: pyapi_array.c  pyapi_array.h  pyapi_helper.c  pyapi_helper.h  pyapi_regression.c  pyapi_regression.h  setup.py  teracada_pyapi.c  unit_tests.py  unit_tests_bkp.py
unit_tests/: linear_regression.py
unit_tests/old/: unit_tests.cc  unit_tests_graph.cc  unit_tests_matrix.cc  unit_tests_teracada_graph.cc  unit_tests_teracada_matrix.cc
